# SearchAdsCLI

./: .gitignore  README.md  pyproject.toml
searchads/: main.py
searchads/commands/: campaign.py  configure.py  keywords.py
searchads/utils/: access_token.py  adgroups_api.py  campaigns_api.py  config.py  keywords_api.py
searchadscli/: main.py
searchadscli/commands/: campaign.py  configure.py  keywords.py
searchadscli/utils/: adgroups_api.py  campaigns_api.py  keywords_api.py
